# tennisfolio

./: # 🎾 Tennisfolio — Cowork Project Brief.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TennisFolio Color Palette.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 87854819d290_add_entity_icons.py  92c446b515d8_init.py  a1e6d2f8c3b9_add_clubs_country.py  b8d3e5f1a2c4_add_tournaments_organiser.py  c2f5aaa3b9d7_create_core_schema_opponents_clubs_.py  d4c8f1a2b3e5_add_courts_model.py  f3a7c1d9e4b2_fix_age_range_enum_bands.py
apps/api/scripts/: import_seed.py
apps/api/seed/: clubs.csv  courts.csv  matches.csv  opponents.csv  sets.csv  tournaments.csv
apps/api/src/app/: config.py  db.py  errors.py  main.py  scoring.py  seed_import.py  stats.py
apps/api/src/app/models/: __init__.py  base.py  club.py  court.py  enums.py  match.py  opponent.py  set.py  tournament.py
apps/api/src/app/routers/: clubs.py  common.py  data_import.py  data_reset.py  export.py  matches.py  opponents.py  stats.py  tournaments.py
apps/api/src/app/schemas/: __init__.py  club.py  common.py  court.py  data_import.py  entity_icon.py  match.py  opponent.py  stats.py  tournament.py
apps/api/tests/: conftest.py  test_clubs.py  test_data_reset.py  test_export.py  test_import.py  test_matches.py  test_models.py  test_opponents.py  test_scoring.py  test_stats.py  test_tournaments.py
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  (+2 more)
docs/: data-export.md  design-system.md  index.html  schema.md
e2e/: package.json  playwright.config.ts  tsconfig.json
(+103 files in other folders)
